tests/Asm/negative/vtest009.jva
-- case type mismatch

inductive list {
  nil : list;
  cons : * -> list -> list;
}

function main() {
  alloc nil;
  case list {
    nil: { pop; push "a"; }
    cons: { pop; push 1; }
  };
  ret;
}
